tests/baselines/reference/collisionExportsRequireAndAmbientEnum.errors.txt
collisionExportsRequireAndAmbientEnum_externalmodule.ts(9,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndAmbientEnum_externalmodule.ts(19,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndAmbientEnum_globalFile.ts(9,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndAmbientEnum_globalFile.ts(19,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionExportsRequireAndAmbientEnum_externalmodule.ts (2 errors) ====
    export declare enum require {
        _thisVal1,
        _thisVal2,
    }
    export declare enum exports {
        _thisVal1,
        _thisVal2,
    }
    declare module m1 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export declare enum require { 
            _thisVal1,
            _thisVal2,
        }
        export declare enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    
==== collisionExportsRequireAndAmbientEnum_globalFile.ts (2 errors) ====
    declare enum require {
        _thisVal1,
        _thisVal2,
    }
    declare enum exports {
        _thisVal1,
        _thisVal2,
    }
    declare module m3 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export declare enum require {
            _thisVal1,
            _thisVal2,
        }
        export declare enum exports {
            _thisVal1,
            _thisVal2,
        }
    }